Fixes for homepage banner h2 spacing.

--- a/www/dev/_hero--refactor.scss
+++ b/www/dev/_hero--refactor.scss
@@ -84,6 +84,11 @@
 
 }
 
+a.hero-image.hero-image--primary .hero-image__text h2 {
+  margin-top: 0.8em;
+}
+
+
 .hero-container--gallery-3 .hero-image--primary {
   @include skinny-only {
     width: 100%;
@@ -135,8 +140,8 @@
 /* misnamed - this is the hero image text for the large image in the 3up */
 .left_text{
   right: 0;
-  bottom: 50%;
-  width: 40%;
+  bottom: 40%;
+  width: 50%;
   
   @include mobile {
     width: 100%;
